--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -1,100 +1,73 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <link rel="stylesheet" href="mobile.css">
-  <link rel="stylesheet" href="media-queries.css">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-<header>
-  <img class="logo-header" src="images/logo.svg" alt="logo-fylo">
-  <ul>
-    <li>Features</li>
-    <li>Team</li>
-    <li>Sign In</li>
-  </ul>
-</header>
-<main>
-  <article class="fisrt-art"> 
-    <img class="ilustration" src="images/illustration-1.svg" alt="">
-    <div class="">
-      <h1>All your files in one secure location, accessible anywhere.</h1>
-      <p> Fylo stores your most important files in one secure location.
-        Access them wherever you need, share and collaborate with friends,
-        family, and co-workers.</p>
-        <div class="inputs">
-          <input type="email" name="email" id="email" required placeholder="Enter your e-mail">
-          <input type="submit" value="Get started">
-        </div>
-    </div>
-  </article>
-  <article class="second-art">
-    <img class="ilustration" src="images/illustration-2.svg" alt="">
-    <h2>Stay productive, wherever you are</h2>
-    <p>Never let location be an issue when accessing your files. Fylo has you 
-      covered for all of your file storage needs</p>
-      <p> Securely share files and folders with friends, family and colleagues for 
-        live collaboration. No email attachments required!</p>
-        <span> See how Fylo works <img class="arrow" src="images/icon-arrow.svg" alt=""></span>
-        <hr>
-  </article>
 
-  <aside>
-    <img src="images/icon-quotes.svg" alt="">
-    <p> Fylo has improved our team productivity by an order of magnitude. Since 
-      making the switch our team has become a well-oiled collaboration machine.</p>
-      <div class="profile">
-        <img src="images/avatar-testimonial.jpg" alt="">
-        <div class="profile-name">
-          <h3>Kyle Burton</h3>
-          <span> Founder & CEO, Huddle</span>
-        </div>
-      </div>
-  </aside>
-</main>
-<section class="extra">
-  <div class="access">
-    <h2>Get early access today</h2>
-    <p> It only takes a minute to sign up and our free starter tier is extremely generous.
-      If you have any questions, our support team would be happy to help you.</p>
-  </div>
-    <div class="inputs-2">
-      <input type="email" placeholder="Email@example.com" required>
-      <input type="submit" value=" Get Started For Free">
-    </div>
-</section>
+  Features
+  Team
+  Sign In
 
-<footer>
-  <img class="footer-logo" src="images/logo.svg" alt="">
-  <div class="contact">
-    <img src="images/icon-phone.svg" alt="">
-    <p>Phone: +1-543-123-4567</p>
-  </div>
-  <div class="contact">
-    <img src="images/icon-email.svg" alt="">
-    <p>example@fylo.com</p>
-  </div>
+  All your files in one secure location, accessible anywhere.
 
-  <ul class="ul-footer">
-    <li>About Us</li>
-    <li>Jobs</li>
-    <li>Press</li>
-    <li>Blog</li>
-   </ul>
-    <ul class="ul-footer">
-      <li>Contact Us</li>
-      <li>Terms</li>
-      <li>Privacy</li>
-    </ul>
- 
-</footer>
+  Fylo stores your most important files in one secure location. 
+  Access them wherever you need, share and collaborate with friends, 
+  family, and co-workers.
 
+  Get Started
+
+  Stay productive, wherever you are
+
+  Never let location be an issue when accessing your files. Fylo has you 
+  covered for all of your file storage needs.
+
+  Securely share files and folders with friends, family and colleagues for 
+  live collaboration. No email attachments required!
+
+  See how Fylo works
+
+  Fylo has improved our team productivity by an order of magnitude. Since 
+  making the switch our team has become a well-oiled collaboration machine.
+
+  Kyle Burton
+  Founder & CEO, Huddle
+
+  Get early access today
+
+  It only takes a minute to sign up and our free starter tier is extremely generous. 
+  If you have any questions, our support team would be happy to help you.
+
+  Get Started For Free
+
+  Phone: +1-543-123-4567
+  example@fylo.com
+
+  About Us
+  Jobs
+  Press
+  Blog
+
+  Contact Us
+  Terms
+  Privacy
+
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
 </body>
 </html>
