--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -5,69 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <script src="https://kit.fontawesome.com/e842536017.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="mobile.css">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
+<header>
+  <img src="images/logo.svg" alt="logo-fylo">
+  <ul>
+    <li>
+      <a href="#">Features</a>
+    </li>
+    <li>
+      <a href="#">Team</a>
+    </li>
+    <li>
+      <a href="#"> Sign In</a>
+    </li>
+  </ul>
+</header>
+  <main>
+    <section class="first-s">
+      <div class="text-field">
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,
+          family, and co-workers.
+        </p>
+        <div class="buttons">
+          <input type="email" name="email" id="email" required placeholder="Enter your email...">
+          <button>Get Started</button>
+        </div>
+      </div>
+      <img class="ilustration" src="images/illustration-1.svg" alt="ilustration" >
+    </section>
+    <section class="second-s">
+      <div class="text-field">
+        <h1>Stay productive, wherever you are</h1>
+        <p> Never let location be an issue when accessing your files. Fylo has you 
+          covered for all of your file storage needs.
+          <br>
+          Securely share files and folders with friends, family and colleagues for 
+          live collaboration. No email attachments required!
+        </p>
+        <span> See how Fylo works <img class="arrow" src="images/icon-arrow.svg" alt="arrow"></span>
+        <div class="testimony">
+          <img src="images/icon-quotes.svg" alt="quotes">
+           <p> Fylo has improved our team productivity by an order of magnitude.Since 
+            making the switch our team has become a well-oiled collaboration machine.</p>
+            <div class="profile">
+              <img class="avatar" src="images/avatar-testimonial.jpg" alt="">
+              <h2>Kyle Burton</h2>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+            <img class="ilustration" src="images/illustration-2.svg" alt="">
+        </div>
+      </div>
+    </section>
+    <aside>
+      <h2>Get early access today</h2>
+      <p>  It only takes a minute to sign up and our free starter tier is extremely generous. 
+        If you have any questions, our support team would be happy to help you.
+      </p>
+      <div class="buttons">
+        <input type="email" required placeholder="enter your Email...">
+        <button>Get Started For Free</button>
+      </div>
+    </aside>
+  </main>
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <img src="images/logo.svg" alt="logo-fylo">
+    <div class="contact">
+      <img src="images/icon-phone.svg" alt="">
+      <p>Phone: +1-543-123-4567</p>
+    </div>
+    <div class="contact">
+      <img src="images/icon-email.svg" alt="">
+      <p>example@fylo.com</p>
+    </div>
+
+    <ul>
+      <li>About Us</li>
+      <li>Jobs</li>
+      <li>Press</li>
+      <li>Blog</li>
+      <li>Contact Us</li>
+      <li>Terms</li>
+      <li>Privacy</li>
+    </ul>
+
+    <div class="social-midias">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+    </div>
   </footer>
+  
 </body>
 </html>
