--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -76,10 +76,12 @@
       </div>
     </section>
     <aside>
-      <h2>Get early access today</h2>
-      <p>  It only takes a minute to sign up and our free starter tier is extremely generous. 
-        If you have any questions, our support team would be happy to help you.
-      </p>
+      <div class="aside-txt">
+        <h2>Get early access today</h2>
+        <p>  It only takes a minute to sign up and our free starter tier is extremely generous.
+          If you have any questions, our support team would be happy to help you.
+        </p>
+      </div>
       <div class="buttons">
         <form action="post">
           <input id="email" type="email" required placeholder="email@example.com" autocomplete="off">
@@ -89,14 +91,16 @@
     </aside>
   </main>
   <footer>
-    <img class="logo-footer" src="images/logo.svg" alt="logo-fylo">
-    <div class="contact">
-      <img src="images/icon-phone.svg" alt="">
-      <p>Phone: +1-543-123-4567</p>
-    </div>
-    <div class="contact">
-      <img src="images/icon-email.svg" alt="">
-      <p>example@fylo.com</p>
+    <div class="info">
+      <img class="logo-footer" src="images/logo.svg" alt="logo-fylo">
+      <div class="contact">
+        <img src="images/icon-phone.svg" alt="">
+        <p>Phone: +1-543-123-4567</p>
+      </div>
+      <div class="contact">
+        <img src="images/icon-email.svg" alt="">
+        <p>example@fylo.com</p>
+      </div>
     </div>
 
     <ul>
